[project]
name = "langgraph-deepdive"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "chromadb>=1.0.7",
    "dotenv>=0.9.9",
    "ipykernel>=6.29.5",
    "langchain-community>=0.3.23",
    "langchain-google-genai>=2.1.3",
    "langchain-groq>=0.3.2",
    "langgraph>=0.3.34",
]
